src/test/deca/context/valid/created/instanceof_class/CLASS.deca
// Description:
//		Test instanceof sur des classes
// Resultats:
//		OK

class A{}
class B extends A{}
class C extends B{}

{
	A a = new A();
	a instanceof C;
}
