src/test/deca/context/invalid/created/cast_compatible/subClass.deca
// Description:
//      Cast d'une sous classe
// Resultats:
//      Ligne 7 : no viable alternative at input 'a'

{
    null a = new Object();
}